Briannas second message

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-briannas new website
+Welcome to Brianna's World!
+
+I had a good week this week because I feel like I accomplished something. I did things like painted, cooked, had a virtual movie night with friends, and talked to family. I did have some difficulty alongside school and schoolwork, but that problem was solved.
