added proposal text to index file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-Welcome to Brianna's World!
+TITLE: Natural skin and hair care products/info
 
-I had a good week this week because I feel like I accomplished something. I did things like painted, cooked, had a virtual movie night with friends, and talked to family. I did have some difficulty alongside school and schoolwork, but that problem was solved.
+
+INTRO
+My idea is a skin and hair care improvement website, in which I provide tips and tricks on how to prevent damage and maintain the health of your skin and hair. I will also provide products to help soothe the needs of my customers and followers. Like for example, if you lack protein in your hair and your hair is brittle, I will provide a natural protein treatment hair mask. I aim to help guide women with health tips and tricks to help improve their hair or skin care situations, like if they have acne or damaged hair.I want this website to help women who have problems with their skin and/or their hair so that over time they can have more confidence and lead to a healthier appearance and lifestyle.  The tagline of my website is “When you think Beauty, Think Us!” This idea came to me because this is what I currently struggle with at the moment and it would be nice to also help give people tips on how to improve their situation if they are in the same position.
+BODY
+
+Basically, my website will have a first open up to show you a run down of our services and what we do. Then it will give you an option to look for tips, tricks, products, and a section called “From Women To Women”. This section gives you reviews and other tips I may have left out from other women like you! The tips section gives you tips for hair and skin care and is labeled by the difficulty you are having. Tricks sections give you ticks and different things you can do with your hair that can benefit you. The product sections show you handmade products that can benefit you. My website serves all women who want to have beautiful skin and healthy hair. It helps people of the community who suffer from a lack of confidence and self esteem issues to feel more comfortable in their own skin and feel pretty and also increases the health of the hair and skin.  I will need money in order to make the products and for shipping and handling from the products. I will also need a support team to be fact checked.
+
+
+
+
+CONCLUSION
+
+
+
+ In conclusion, my website will benefit many women by helping guide them to a healthier way in taking care of their skin and hair. This will lead them to more beautiful skin and healthier hair. I know my business will be a success when women listen to my tips and I start seeing a flourish in the beauty industry.
