added html to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Ollie Bike Sharing</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+<h1>Brianna's Website</h1>
+  <h2>Be natural, feel natural! Beauty lies skin deep!</h2>
+  <h4>This is my h4 header</h4>
+  <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental. Here is a <a href= "https://Brianna1018.github.io" > list</a> of cities where you can find us.
+  <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/bikes1.jpg"/>
+    <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-2743c47712fd-512"/>
+</body>
+</html>
+
+
+
+
+
 TITLE: Natural skin and hair care products/info
 
 
