new updated html codecademy

--- a/index.html
+++ b/index.html
@@ -14,7 +14,40 @@
     <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-2743c47712fd-512"/>
 </body>
 </html>
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Ollie Bike Sharing</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+  <div class="container">
+    <div class="nav">
+      <h2>Ollie</h2>
+      <ul>
+        <li>sign up</li>
+        <li>search bikes</li>
+        <li>reserve a bike</li>
+        <li>about us</li>
+      </ul>
+    </div>
+    <div class="main">
+      <h1>Ollie Bike Sharing</h1>
+      <h3>Share Your Pedals with the World.</h3>
+      <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental. Here is a <a href="cities.html">list</a> of cities where you can find us.</p>
+      <video width="320" height="240" controls>
+        <source src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
+</body>
+</html>
+<!DOCTYPE html>
+<html>...</html>
+<head>...</head>
+<title>...</title>
+<meta charset="utf-8"/>
 
 
 
@@ -29,7 +62,7 @@ BODY
 Basically, my website will have a first open up to show you a run down of our services and what we do. Then it will give you an option to look for tips, tricks, products, and a section called “From Women To Women”. This section gives you reviews and other tips I may have left out from other women like you! The tips section gives you tips for hair and skin care and is labeled by the difficulty you are having. Tricks sections give you ticks and different things you can do with your hair that can benefit you. The product sections show you handmade products that can benefit you. My website serves all women who want to have beautiful skin and healthy hair. It helps people of the community who suffer from a lack of confidence and self esteem issues to feel more comfortable in their own skin and feel pretty and also increases the health of the hair and skin.  I will need money in order to make the products and for shipping and handling from the products. I will also need a support team to be fact checked.
 
 
-
+Brianna's World?
 
 CONCLUSION
 
