new chnages to final websites

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="#contact">From Women To Women</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Contact</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Contact us at 804-543-4622</a></li>
       </ul>
     </div>
   </div>
@@ -52,28 +52,28 @@
 
       <!-- SLIDE 1 -->
       <div class="item active">
-        <img src="https://placehold.it/1200x400?text=IMAGE 1" alt="Image">
+        <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-ca2dd183614f-512" alt="Image">
         <div class="carousel-caption">
-          <h3>TITLE FOR SLIDE 1</h3>
-          <p>Desription</p>
+          <h3>Bri's Beauty Blog</h3>
+          <p>we offer hair care tips to increase hair health and growth to your desire.</p>
         </div>
       </div>
 
       <!-- SLIDE 2 -->
       <div class="item">
-        <img src="https://placehold.it/1200x400?text=IMAGE 2" alt="Image">
+        <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-0850a752571d-512" alt="Image">
         <div class="carousel-caption">
-          <h3>TITLE FOR SLIDE 2</h3>
-          <p>Desription</p>
+          <h3>Bri's Beauty Blog</h3>
+          <p>We offer skin care tips to help improve your skin care situation.</p>
         </div>
       </div>
 
       <!-- SLIDE 3 -->
       <div class="item">
-        <img src="https://placehold.it/1200x400?text=IMAGE 3" alt="Image">
+        <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-58563c9714b7-512" alt="Image">
         <div class="carousel-caption">
-          <h3>TITLE FOR SLIDE 3</h3>
-          <p>Desription</p>
+          <h3>Bri's Beauty Blog</h3>
+          <p>New hair style? New makeup look? We offer tricks and D.I.Ys to help you get your desired look.</p>
         </div>
       </div>
 
@@ -113,19 +113,19 @@ My idea is a skin and hair care improvement website, in which I provide tips and
   <h3>What We Do</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <img src="https://images.unsplash.com/photo-1573165349168-b66c8bc087fc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1649&q=80" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-89ac93609c45-512" class="img-responsive" style="width:100%" alt="Image">
       <br>
-      <p>Current Project</p>
+      <p>Skin Care Tips For Women</p>
     </div>
     <div class="col-sm-4">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-32c08d28a1f0-512" class="img-responsive" style="width:100%" alt="Image">
       <br>
-      <p>Project 2</p>
+      <p>Hair Care Tips For Women</p>
     </div>
     <div class="col-sm-4">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-701dd809974a-5122" class="img-responsive" style="width:100%" alt="Image">
       <br>
-      <p>Project 1</p>
+      <p>D.I.Y Tricks</p>
     </div>
   </div>
 </div>
@@ -142,16 +142,16 @@ My idea is a skin and hair care improvement website, in which I provide tips and
           <h3>Our Values</h3>
         </div>
         <div class="col-sm-3">
-          <h4>Value 1</h4>
-          <p>Some text...</p>
+          <h4>Individuality</h4>
+          <p>My company believes in the beauty of uniqueness and individuality of every women who comes onto our website. Every women is beautiful in their own way and we truly value in that.</p>
         </div>
         <div class="col-sm-3">
-          <h4>Value 2</h4>
-          <p>Some text...</p>
+          <h4>Health</h4>
+          <p>Our company values health in out tips and tricks. We want healthy, beauty hair and skin rather than damaging you by providing misleading info and unhealthy beauty tips that may harm our customers. </p>
         </div>
         <div class="col-sm-3">
-          <h4>Value 3</h4>
-          <p>Some text...</p>
+          <h4>Autheticity</h4>
+          <p>We value autheticity in our website. We try to offer genuiene advice to our customers.</p>
         </div>
       </div>
     </div>
@@ -165,12 +165,12 @@ My idea is a skin and hair care improvement website, in which I provide tips and
 <div class="container text-center">
   <div class="row">
     <div class="col-sm-6">
-      <img src="https://placehold.it/150x80?text=VIDEO" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-2743c47712fd-512" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-6">
-      <h4>Learn More Section</h4>
+      <h4>More about us...</h4>
       <br>
-      <p>Tell us more about your idea...</p>
+      <p>Tell us more about your idea..</p>
     </div>
   </div>
 </div>
@@ -184,18 +184,18 @@ My idea is a skin and hair care improvement website, in which I provide tips and
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <h4>Contact</h4>
+        <h4>Contact info</h4>
         <br>
-        <p>Hours of Operation?</p>
+        <p>9am-5pm</p>
         <br><br>
-        <p>Your Email</p>
-        <p>100 Buford Rd, Bon Air, VA 23235</p>
-        <p>(804)-555-5555</p>
+        <p>Bribri101804@gmail.com</p>
+        <p>6024 Kings Crest Dr, Chesterfield VA, 23832</p>
+        <p>(804)-543-4622</p>
       </div>
       <div class="col-sm-6">
-        <img src="https://placehold.it/150x80?text=LOGO" class="img-responsive" style="width:50%" alt="Image">
+        <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-a13ddba92bc4-512" class="img-responsive" style="width:50%" alt="Image">
         <br><br>
-        <p>A concluding tagline about your idea. Vision Statement?</p>
+        <p>"Where nature meets beauty!""</p>
       </div>
     </div>
   </div>
