--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="#contact">From Women To Women</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Contact us at 804-543-4622</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Contact Us</a></li>
       </ul>
     </div>
   </div>
@@ -70,7 +70,7 @@
 
       <!-- SLIDE 3 -->
       <div class="item">
-        <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-58563c9714b7-512" alt="Image">
+        <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-ed9edb29edf2-512" alt="Image">
         <div class="carousel-caption">
           <h3>Bri's Beauty Blog</h3>
           <p>New hair style? New makeup look? We offer tricks and D.I.Ys to help you get your desired look.</p>
@@ -105,7 +105,7 @@ My idea is a skin and hair care improvement website, in which I provide tips and
   </div>
 <!-- END OF "ABOUT" SECTION -->
 
-<br><br><br>
+<br><br<br>
 
 <!-- START OF "WHAT WE DO" SECTION -->
 <a id="work"></a>
@@ -170,7 +170,7 @@ My idea is a skin and hair care improvement website, in which I provide tips and
     <div class="col-sm-6">
       <h4>More about us...</h4>
       <br>
-      <p>Tell us more about your idea..</p>
+      <p>We hope you come on our website and find eveyrthing you may need! We aim to help you find these natural beauty tips to help improve your skin and/or hair care situation and help you be more confident in your own skin.</p>
     </div>
   </div>
 </div>
@@ -184,13 +184,12 @@ My idea is a skin and hair care improvement website, in which I provide tips and
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <h4>Contact info</h4>
+        <h4><b>Contact info</b></h4>
         <br>
-        <p>9am-5pm</p>
-        <br><br>
-        <p>Bribri101804@gmail.com</p>
-        <p>6024 Kings Crest Dr, Chesterfield VA, 23832</p>
-        <p>(804)-543-4622</p>
+        <p><b>Hours:</b> Monday-Friday from 11am-5pm</p>
+        <p><b>Email:</b> Bribri101804@gmail.com</p>
+        <p><b>Address:</b> 1200 sesame street</p>
+        <p><b>Phone Number:</b> (804)-555-5555</p>
       </div>
       <div class="col-sm-6">
         <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-a13ddba92bc4-512" class="img-responsive" style="width:50%" alt="Image">
