--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<body>
+
+    <div class="bg">https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-7d9b47243fd4-512</div>
+
+    <p class="py-5 text-center">This example creates a full page background image. Try to resize the browser window to see how it always will cover the full screen (when scrolled to top), and that it scales nicely on all screen sizes.</p>
+
+</body>
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
