--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <title>Bri's Beauty Blog</title>
 </body>
     </div>
   </div>
@@ -169,10 +172,12 @@ My idea is a skin and hair care improvement website, in which I provide tips and
 <div class="container text-center">
   <div class="row">
     <div class="col-sm-6">
-      <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-2743c47712fd-512" class="img-responsive" style="width:100%" alt="Image">
+      <video width="320" height="240" controls>
+        <source src="https://youtu.be/1QLkgxOhMSY" type="video/mp4">
+      </video>
     </div>
     <div class="col-sm-6">
-      <h4>More about us...</h4>
+      <h4>Here are some videos displaying tips you could use...</h4>
       <br>
       <p>We hope you come on our website and find eveyrthing you may need! We aim to help you find these natural beauty tips to help improve your skin and/or hair care situation and help you be more confident in your own skin.</p>
     </div>
