updated final background

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ My idea is a skin and hair care improvement website, in which I provide tips and
   <div class="row">
     <div class="col-sm-6">
       <video width="320" height="240" controls>
-        <source src="https://youtu.be/1QLkgxOhMSY" type="video/mp4">
+        <source src="https://youtu.be/gvPnKpwbiZw" type="video/mp4">
       </video>
     </div>
     <div class="col-sm-6">
