--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ My idea is a skin and hair care improvement website, in which I provide tips and
   <div class="row">
     <div class="col-sm-6">
       <video width="320" height="240" controls>
-        <source src="https://youtu.be/gvPnKpwbiZw" type="video/mp4">
+        <source src="https://youtu.be/EV6BCbSeizc" type="video/mp4">
       </video>
     </div>
     <div class="col-sm-6">
@@ -203,7 +203,7 @@ My idea is a skin and hair care improvement website, in which I provide tips and
       <div class="col-sm-6">
         <img src="https://ca.slack-edge.com/TUB168VFW-UTZMKE2GJ-a13ddba92bc4-512" class="img-responsive" style="width:50%" alt="Image">
         <br><br>
-        <p>"Where nature meets beauty!""</p>
+        <p>I hope you enjoyed my website!</p>
       </div>
     </div>
   </div>
