Trying to fix website

--- a/index.html
+++ b/index.html
@@ -172,10 +172,7 @@ My idea is a skin and hair care improvement website, in which I provide tips and
 <div class="container text-center">
   <div class="row">
     <div class="col-sm-6">
-      <video width="320" height="240" controls>
-        <source src="https://youtu.be/EV6BCbSeizc" type="video/mp4">
-      </video>
-    </div>
+        <img src="https://66.media.tumblr.com/5381aec34d99933085b295d08cc238f6/tumblr_p80k6uYW3g1x1f8t7o1_400.jpg"
     <div class="col-sm-6">
       <h4>Here are some videos displaying tips you could use...</h4>
       <br>
