--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <br><br><br>
 <br><br><br>
-
+<p> Welcome to bria's world of natural beauty...</p>
 <!-- YOUR "ABOUT" SECTION -->
   <a id="about"></a>
   <div class="container text-center">
@@ -163,6 +163,8 @@ My idea is a skin and hair care improvement website, in which I provide tips and
       </div>
     </div>
 </div>
+<br><br><br>
+<br><br><br>
 <br><br><br>
 <!-- END OF "VALUES" SECTION -->
 
