--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ My idea is a skin and hair care improvement website, in which I provide tips and
     <div class="col-sm-6">
         <img src="https://66.media.tumblr.com/5381aec34d99933085b295d08cc238f6/tumblr_p80k6uYW3g1x1f8t7o1_400.jpg"
     <div class="col-sm-6">
-      <h4>Here are some videos displaying tips you could use...</h4>
+      <h4>Weclome to Brianna's Natural Beauty World...</h4>
       <br>
       <p>We hope you come on our website and find eveyrthing you may need! We aim to help you find these natural beauty tips to help improve your skin and/or hair care situation and help you be more confident in your own skin.</p>
     </div>
